--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -1,6 +1,6 @@
 <div class="conservation">
 	<!-- Progress Indicator -->
-  <div skrollr class="progress-hor z-450 centered">
+  <div skrollr class="progress-hor z-450">
     <div>
       <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-0="fill:rgba(113,178,201,1);" data-1000="fill:rgba(113,178,201,1);" data-2000="fill:rgba(66,89,104,1);"></circle></svg>
       <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-2000="fill:rgba(66,89,104,1);" data-3000="fill:rgba(113,178,201,1);" data-4000="fill:rgba(113,178,201,1);" data-5000="fill:rgba(66,89,104,1);"></circle></svg>
