--- a/app/views/geology.html
+++ b/app/views/geology.html
@@ -1,6 +1,6 @@
 <div class="geology">
   <!-- Progress Indicator -->
-  <div skrollr class="progress-hor z-450 centered">
+  <div skrollr class="progress-hor z-450">
     <div>
       <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-0="fill:rgba(113,178,201,1);" data-1000="fill:rgba(113,178,201,1);" data-2000="fill:rgba(66,89,104,1);"></circle></svg>
       <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-2000="fill:rgba(66,89,104,1);" data-3000="fill:rgba(113,178,201,1);" data-4000="fill:rgba(113,178,201,1);" data-5000="fill:rgba(66,89,104,1);"></circle></svg>
@@ -50,7 +50,7 @@
   <div id="section01">
     <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">The Edwards Aquifer is a karst aquifer, a term describing a landscape with soluble rocks like limestone, forming caves, sinkholes, and other natural fractures, resulting in highly permeable terrain.</p>
+        <p alt="">The Edwards Aquifer is a <em>karst</em> aquifer, a term describing a landscape with soluble rocks like limestone, forming caves, sinkholes, and other natural fractures, resulting in highly permeable terrain.</p>
         <!-- <p alt="">For millions of years, water has transformed the landscape of the Balcones Fault Zone in South Central Texas, creating the Edwards Aquifer and the hundreds of caves and karst features within the limestone.</p>    -->
       </div>
     </div>
@@ -154,7 +154,7 @@
   <div id="section06">
     <div skrollr class="div-fixed z-400" data-13999="top:8rem;" data-14000="opacity:0; left:-50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">Historical data representing the rate of recharge within the aquifer for each year measured in thousands of acre feet.<br/>The middle segment of the aquifer represents the recharge zone. The bluer the color, the more water is being added.</p>
+        <p alt="">Historical data representing the rate of recharge within the aquifer for each year measured in thousands of acre feet. The middle segment of the aquifer represents the recharge zone. The bluer the color, the more water is being added.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-500" data-13999="top:16rem;" data-14000="opacity:0; left:50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:-50rem;">
@@ -179,7 +179,7 @@
     <div skrollr class="div-fixed z-100" data-16999="top:16rem;" data-17000="opacity:0; left:50rem;" data-18000="opacity:1; left:5rem;" data-19000="top:16rem;" data-21999="top:-40rem;" data-22000="opacity:1; top:-40rem;" data-23000="opacity:0; top:-60rem;">
       <div id="ck-image-03" class="image-frame-tall"></div>
     </div>
-    <div skrollr class="div-fixed z-500" data-17000="left:4rem; opacity:0; top:18rem;" data-18000="left:16rem; opacity:1; top:18rem;" data-22000="left:16rem; opacity:1; top:52rem;" data-23000="left:16rem; opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-500" data-17000="left:16rem;" data-18000="opacity:0; top:18rem;" data-19000="opacity:1; top:18rem;" data-22000="opacity:1; top:52rem;" data-23000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Descent</p>
       </div>
