--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -1,6 +1,6 @@
 <div class="springs">
   <!-- Progress Indicator -->
-  <div skrollr class="progress-hor z-450 centered">
+  <div skrollr class="progress-hor z-450">
     <div>
       <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-0="fill:rgba(113,178,201,1);" data-1000="fill:rgba(113,178,201,1);" data-2000="fill:rgba(66,89,104,1);"></circle></svg>
       <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-2000="fill:rgba(66,89,104,1);" data-3000="fill:rgba(113,178,201,1);" data-4000="fill:rgba(113,178,201,1);" data-5000="fill:rgba(66,89,104,1);"></circle></svg>
@@ -117,7 +117,7 @@
   <div id="section04">
     <div skrollr class="div-fixed z-400" data-10999="top:7rem;" data-11000="opacity:0; left:-50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">The 1950’s drought of record brought historically low aquifer and spring flow levels to South Texas.  Today, a similar drought—coupled with a larger population and pumping demands—could have devastating effects on the aquifer.  Drought management plans mandated by the EAA reduce pumping during critical period to as much as 44% in the most severe stage of drought.</p>
+        <p alt="">The 1950’s drought of record brought historically low aquifer and spring flow levels to South Texas.  Today, a similar drought, coupled with a larger population and pumping demands, could have devastating effects on the aquifer.  Drought management plans mandated by the EAA reduce pumping during critical period to as much as 44% in the most severe stage of drought.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-100" data-10999="top:16rem;" data-11000="opacity:0; left:50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:-50rem;">
