--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -3,7 +3,9 @@
 /* Assumptions: 100% = 1 em ~= 16px ~= 14pt */
 html {
   font-size: 100%; 
-  min-width: 640px;
+  /*min-width: 640px;*/
+  /*max-width: 1280px;*/
+  width: 1280px;
 }
 body {
   overflow-x: hidden;
@@ -11,7 +13,6 @@ body {
   /*position: absolute;*/
   margin-bottom: 5rem;
   text-rendering: optimizeLegibility;
-  /*font-family: 'Exo 2', sans-serif; */
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   -webkit-text-size-adjust:none;
@@ -20,13 +21,14 @@ body {
   -webkit-text-size-adjust:100%;
   -moz-text-size-adjust:100%;
   -ms-text-size-adjust:100%;
-  background-color: #222D35;
+  background-color: #111;
+  /*background-color: #222D35;*/
   color: #fff;
 }
 h1 small {
   color: rgba(198, 147, 10, 1);
 }
-a:hover, a:visited, a:link, a:active
+a, a:hover, a:visited, a:link, a:active
 {
   text-decoration: none;
   /*color: #71B2C9;*/
@@ -35,6 +37,8 @@ a:hover, a:visited, a:link, a:active
 a:hover {
   /*color: #AB650D;*/
   color: #71B2C9;
+  /*color: #8F8100;*/
+  /*color: #f00;*/
 }
 .no-Ibar {
   cursor: default;
@@ -51,15 +55,11 @@ a:hover {
   padding: 0 2rem;
 }
 .apptitle {
-  float: left;
-  padding: 15px 15px;
-  font-size: 18px;
-  line-height: 20px;
-  height: 50px;
-  color: #AADD6D; /* Green: #AADD6D; Blue: #71B2C9;*/
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Ubuntu Condensed', sans-serif;
   font-size: 2rem;
-  font-weight: 700;
+  /* Green: #AADD6D; Blue: #71B2C9; Seagreen: #73E0E0; Skyblue: #9CCAEA; */
+  /*color: #9CCAEA;*/
+  /*background-color: #71B2C9;*/ 
 }
 .eaa-logo {
   min-width: 80px;
@@ -70,21 +70,39 @@ a:hover {
   margin-bottom: 0.3rem;
 }
 .eaa-logo-contact {
-  margin: 2rem 0rem 0rem 1rem;
   padding: 1rem;
   background-color: #fff;
   border: 2px solid #000;
-  -webkit-border-radius: 0 4rem 0;
-  -moz-border-radius: 0 4rem 0;
-  border-radius: 0 4rem 0;
+  -webkit-border-radius: 0 1rem 0;
+  -moz-border-radius: 0 1rem 0;
+  border-radius: 0 1rem 0;
+  width: 10rem;
+  left: 38rem;
+  top: 2rem;
+}
+.encompass-logo-contact {
+  padding: 0.5rem 1rem;
+  background-color: #111;
+  border: 2px solid rgba(113,178,201,0.7); /*#71B2C9;*/
+  width: 12rem;
+  left: 49rem;
+  top: 3rem;
+}
+.ut-logo-contact {
+  width: 9rem;
+  left: 62rem;
+  top: 1rem;
 }
 .subtitle {
   font-size: 1.2rem;
   color: rgba(198, 147, 10, 1);
 }
 .information {
-  padding-top: 1rem;
-  padding-left: 1rem;
+  padding: 1rem;
+}
+.fullscreen {
+  top: 1rem;
+  right: 1rem;
 }
 .footer {
   color: #777;
@@ -92,4 +110,43 @@ a:hover {
   border-top: 1px solid #333;
   font-size: 0.9rem;
   padding-top: 0.8rem;
+}
+
+#data-access-index {
+  top: 4.25%;
+  right: 2rem;
+}
+
+.open-panel { left:0 !important; }
+.open-panel-top-50 { top: 3rem !important; }
+
+.open { left:12% !important; }
+
+.offstage { left: -150%; }
+.offstage-top { bottom: -120%; }
+
+.transition { 
+  -webkit-transition: left 0.3s ease-out;  /* Chrome 1-25, Safari 3.2+ */
+  -moz-transition: left 0.3s ease-out;  /* Firefox 4-15 */
+  -o-transition: left 0.3s ease-out;  /* Opera 10.50–12.00 */
+  transition: left 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+}
+
+.transition-slide-down { 
+  -webkit-transition: top 0.5s ease-out;  /* Chrome 1-25, Safari 3.2+ */
+  -moz-transition: top 0.5s ease-out;  /* Firefox 4-15 */
+  -o-transition: top 0.5s ease-out;  /* Opera 10.50–12.00 */
+  transition: top 0.5s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+}
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.backdrop-info {
+  width: 100%;
+  height: 20%;
+  background-color: #000;
 }
