All edits are in except for map animation, map data and new interactive graphics. Extraneous files culled out of project as well.

--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -10,13 +10,15 @@
       <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-14000="fill:rgba(66,89,104,1);" data-15000="fill:rgba(113,178,201,1);" data-16000="fill:rgba(113,178,201,1);" data-17000="fill:rgba(66,89,104,1);"></circle></svg>
       <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-17000="fill:rgba(66,89,104,1);" data-18000="fill:rgba(113,178,201,1);" data-19000="fill:rgba(113,178,201,1);" data-20000="fill:rgba(66,89,104,1);"></circle></svg>
       <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-20000="fill:rgba(66,89,104,1);" data-21000="fill:rgba(113,178,201,1);" data-22000="fill:rgba(113,178,201,1);" data-23000="fill:rgba(66,89,104,1);"></circle></svg>
-      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-23000="fill:rgba(66,89,104,1);" data-24000="fill:rgba(113,178,201,1);" data-25000="fill:rgba(113,178,201,1);" data-26000="fill:rgba(66,89,104,1);"></circle></svg>
-      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-26000="fill:rgba(66,89,104,1);" data-27000="fill:rgba(113,178,201,1);"></circle></svg>
+      <!-- <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-23000="fill:rgba(66,89,104,1);" data-24000="fill:rgba(113,178,201,1);" data-25000="fill:rgba(113,178,201,1);" data-26000="fill:rgba(66,89,104,1);"></circle></svg> -->
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-23000="fill:rgba(66,89,104,1);" data-24000="fill:rgba(113,178,201,1);"></circle></svg>
+      <!-- <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-26000="fill:rgba(66,89,104,1);" data-27000="fill:rgba(113,178,201,1);"></circle></svg> -->
     </div>
   </div>
 
   <!-- Backgrounds -->
-  <div skrollr id="watersteps-1" class="div-fixed z-50 background flip-image-hor" data-0="opacity:0.05; top:0%;" data-1000="opacity:0.15; top:-4%;" data-26500="opacity:0.15; top:-100%;" data-27000="opacity:0.05;"></div>
+  <!-- <div skrollr id="watersteps-1" class="div-fixed z-50 background flip-image-hor" data-0="opacity:0.05; top:0%;" data-1000="opacity:0.15; top:-4%;" data-26500="opacity:0.15; top:-100%;" data-27000="opacity:0.05;"></div> -->
+  <div skrollr id="watersteps-1" class="div-fixed z-50 background flip-image-hor" data-0="opacity:0.05; top:0%;" data-1000="opacity:0.15; top:-4%;" data-24000="opacity:0.15; top:-100%;" data-24500="opacity:0.05;"></div>
 
   <!-- Scroll Indicator -->
   <div skrollr class="div-fixed z-500" data-0="top:54rem;" data-1000="opacity:1; left:9rem;" data-2000="opacity:0; left:-10rem;">
@@ -32,7 +34,7 @@
   <div id="section00">
     <div skrollr class="div-fixed z-400" data-0="top:7rem; opacity:1; left:5rem;" data-1000="opacity:1; left:5rem;" data-2000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">The Edwards Aquifer is protected and conserved through one of the most comprehensive groundwater management plans in the country.  The Edwards Aquifer Authority Act, derived by Texas legislation from a federal court ruling, provided the means to limit annual water withdrawals, institute region-wide drought restrictions when necessary, and consider the effect of the EAA’s actions on downstream users.</p>
+        <p alt="">The Edwards Aquifer is protected and conserved through one of the most comprehensive groundwater management plans in the country.  The <a href="http://edwardsaquifer.org/" target="_blank">Edwards Aquifer Authority Act</a>, derived by Texas legislation from a federal court ruling, provided the means to limit annual water withdrawals, institute region-wide drought restrictions when necessary, and consider the effect of the EAA’s actions on downstream users.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-250" data-0="top:42rem; opacity:1; left:52rem;" data-1000="opacity:1; left:52rem;" data-2000="opacity:0; left:60rem;">
@@ -56,13 +58,14 @@
   <div id="section01">
     <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">IMAGE</p>
+        <p alt="">The EAA is governed by a 17-member board of directors representing the interests of constituents from across the Edwards Aquifer region. Fifteen directors serve as voting members of the board, elected from single-member districts to four-year terms whlie two additional non-voting directors are appointed to four-year terms.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-500" data-1999="top:16rem;" data-2000="opacity:0; left:50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:-50rem;">
-      <div class="text-frame">
-        <p alt="">IMAGE</p>
-      </div>
+    <div skrollr class="div-fixed z-200" data-1999="top:14rem;" data-2000="opacity:0; left:-10rem;" data-3000="opacity:1; left:3rem;" data-4000="opacity:1; left:3rem;" data-5000="opacity:0; left:-10rem;">
+      <div id="cons-image-23" class="image-district"></div>
+    </div>
+    <div skrollr class="div-fixed z-100" data-1999="top:16rem;" data-2000="opacity:0; left:50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:-50rem;">
+      <div id="cons-image-24" class="image-frame"></div>
     </div>
     <div skrollr class="div-fixed z-450" data-1999="left:18rem;" data-2000="opacity:0; top:58rem;" data-3000="opacity:1; top:52rem;" data-4000="opacity:1; top:52rem;" data-5000="opacity:0; top:58rem;">
       <div class="text-label">
@@ -80,9 +83,13 @@
       </div>
     </div>
     <div skrollr class="div-fixed z-500" data-4999="top:16rem;" data-5000="opacity:0; left:50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:-50rem;">
-      <div class="text-frame">
-        <p alt="">IMAGE</p>
-      </div>
+      <!-- <div class="image-frame"> -->
+        <div style="width: 400px; height: 400px; padding-bottom: 30px;">
+          <script src="http://cdn.tagul.com/embed/qmmwob6ujte4"></script>
+          <!-- Please don't remove attribution to Tagul.com -->
+          <div style="display: table; margin: 0 auto;"><a href="http://tagul.com/">Created with Tagul.com</a></div>
+        </div>
+      <!-- </div> -->
     </div>
     <div skrollr class="div-fixed z-450" data-4999="left:18rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
       <div class="text-label">
@@ -116,7 +123,7 @@
   <div id="section04">
     <div skrollr class="div-fixed z-400" data-10999="top:8rem;" data-11000="opacity:0; left:-50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">Cities and rural homes use water for domestic purposes including drinking, landscaping, gardening, and bathing.</p>
+        <p alt="">Cities and rural homes use aquifer water for domestic purposes - including drinking, landscaping, gardening, and bathing.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-300" data-10999="top:19rem;" data-11000="opacity:0; left:60rem;" data-12000="opacity:1; left:51rem;" data-13000="opacity:1; left:51rem;" data-14000="opacity:0; left:60rem;">
@@ -133,7 +140,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-10999="left:18rem;" data-11000="opacity:0; top:58rem;" data-12000="opacity:1; top:52rem;" data-13000="opacity:1; top:52rem;" data-14000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Users</p>
+        <p>Domestic Use</p>
       </div>
     </div>
   </div>
@@ -156,7 +163,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Food &amp; Livestock</p>
+        <p>Irrigation &amp; Ranching </p>
       </div>
     </div>
   </div>
@@ -165,7 +172,7 @@
   <div id="section06">
     <div skrollr class="div-fixed z-400" data-16999="top:8rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">Industry and commerce depend on water to sustain the economy.</p>
+        <p alt="">Industry and commerce depend on the aquifer to sustain the economy.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-250" data-16999="top:14rem;" data-17000="opacity:0; left:70rem;" data-18000="opacity:1; left:42rem;" data-19000="opacity:1; left:42rem;" data-20000="opacity:0; left:70rem;">
@@ -202,13 +209,13 @@
     </div>
     <div skrollr class="div-fixed z-450" data-19999="left:18rem;" data-20000="opacity:0; top:58rem;" data-21000="opacity:1; top:52rem;" data-22000="opacity:1; top:52rem;" data-23000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Play</p>
+        <p>Recreation</p>
       </div>
     </div>
   </div>
 
   <!-- Section 8 -->
-  <div id="section08">
+  <!-- <div id="section08">
     <div skrollr class="div-fixed z-400" data-22999="top:8rem;" data-23000="opacity:0; left:-50rem;" data-24000="opacity:1; left:5rem;" data-25000="opacity:1; left:5rem;" data-26000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Historical data representing the well levels within the aquifer for each year measured in feet above mean sea level.<br/>The markers indicate stream gauges used to measure the aquifer levels.</p>
@@ -221,14 +228,33 @@
     </div>
     <div skrollr class="div-fixed z-450" data-22999="left:18rem;" data-23000="opacity:0; top:58rem;" data-24000="opacity:1; top:52rem;" data-25000="opacity:1; top:52rem;" data-26000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Well Data</p>
+        <p>Historic Aquifer Levels</p>
+      </div>
+    </div>
+  </div> -->
+
+  <!-- Section 8 END -->
+  <div id="section08">
+    <div skrollr class="div-fixed z-400" data-22999="top:8rem;" data-23000="opacity:0; left:-50rem;" data-24000="opacity:1; left:5rem;">
+      <div class="text-frame">
+        <p alt="">The Edwards Aquifer water level fluctuates based on the amount of recharge entering the ground, and the amount of discharge leaving through wells and springs.  Two wells, the J17 in Bexar and J27 in Uvalde Counties, serve as index wells for the entire aquifer system.  If the aquifer level falls below certain thresholds, the Critical Period Management Plan goes into effect to reduce pumping incrementally depending on the stage.</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-500" data-22999="top:16rem;" data-23000="opacity:0; left:50rem;" data-24000="opacity:1; left:5rem;">
+      <div id="interactive" class="interactive interactive-frame">
+        <eaa-gauge-data-interactive-wells></eaa-gauge-data-interactive-wells>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-450" data-22999="left:18rem;" data-23000="opacity:0; top:58rem;" data-24000="opacity:1; top:52rem;">
+      <div class="text-label">
+        <p>Historic Aquifer Levels</p>
       </div>
     </div>
   </div>
 
   <!-- Section 9 -->
   <!-- Wickley: EAA ACT & CPM -->
-  <div id="section09">
+  <!-- <div id="section09">
     <div skrollr class="div-fixed z-400" data-25999="top:8rem;" data-26000="opacity:0; left:-50rem;" data-27000="opacity:1; left:5rem;">
       <div class="text-frame">
         <p alt="">IMAGE</p>
@@ -242,6 +268,20 @@
     <div skrollr class="div-fixed z-450" data-25999="left:18rem;" data-26000="opacity:0; top:58rem;" data-27000="opacity:1; top:52rem;">
       <div class="text-label">
         <p>EAA ACT &amp; CPM</p>
+      </div>
+    </div>
+  </div> -->
+
+  <!-- Explore Link -->
+  <div id="end">
+    <div skrollr class="div-fixed z-500" data-23499="left:9rem;" data-24000="opacity:0; top:58rem;" data-24500="opacity:1; top:54rem;">
+      <div class="end-link">
+        <a href="#/geography">More Cartography
+          <div id="holder">
+            <div class="dot"></div>
+            <div class="pulse"></div>      
+          </div>
+        </a>
       </div>
     </div>
   </div>
