--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -31,7 +31,8 @@
   <div id="section00">
     <div skrollr class="div-fixed z-400" data-0="top:8rem;" data-1000="opacity:1; left:5rem;" data-2000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">Cool, clear Edwards Aquifer water emerges at Comal Springs, as natural artesian pressure forces the water up the faults and fractures in the overlying rocks.</p>
+        <!-- <p alt="">Cool, clear Edwards Aquifer water emerges at Comal Springs, as natural artesian pressure forces the water up the faults and fractures in the overlying rocks.</p> -->
+        <p alt="">The Edwards Aquifer is home to two of the largest spring systems in Texas and numerous other springs.  These springs have been an important water source to humans for thousands of years and habitat for some endangered species that are found nowhere else on earth.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-250" data-0="top:18rem;" data-1000="opacity:1; left:3rem;" data-2000="opacity:0; left:-10rem;">
@@ -48,7 +49,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-0="left:18rem;" data-1000="opacity:1; top:52rem;" data-2000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Comal Springs</p>
+        <p>Springs of the Edwards Aquifer</p>
       </div>
     </div>
   </div>
@@ -57,7 +58,8 @@
   <div id="section01">
     <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">Beneath the lake, numerous springs emerge along a common fault line propelling millions of gallons of water to the surface daily.</p>
+        <!-- <p alt="">Beneath the lake, numerous springs emerge along a common fault line propelling millions of gallons of water to the surface daily.</p> -->
+        <p alt="">Where artesian pressure is sufficient, water is forced to the surface through faults and other natural fracture to form springs.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-100" data-1999="top:16rem;" data-2000="opacity:0; left:50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:-50rem;">
@@ -108,7 +110,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-7999="left:18rem;" data-8000="opacity:0; top:58rem;" data-9000="opacity:1; top:52rem;" data-10000="opacity:1; top:52rem;" data-11000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Inflows &amp; Estuaries</p>
+        <p>A Vital Resource</p>
       </div>
     </div>
   </div>
@@ -128,7 +130,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-10999="left:18rem;" data-11000="opacity:0; top:58rem;" data-12000="opacity:1; top:52rem;" data-13000="opacity:1; top:52rem;" data-14000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Spring Lake</p>
+        <p>The Implications of Drought and Demand</p>
       </div>
     </div>
   </div>
@@ -137,7 +139,7 @@
   <div id="section05">
     <div skrollr class="div-fixed z-400" data-13999="top:8rem;" data-14000="opacity:0; left:-50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">Historical data representing the spring levels within the aquifer for each year measured in feet above mean sea level.<br/>The markers indicate stream gauges used to measure the aquifer levels.</p>
+        <p alt="">Historical data representing the spring levels within the aquifer for each year measured in feet above mean sea level. The markers indicate stream gauges used to measure the aquifer levels.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-500" data-13999="top:16rem;" data-14000="opacity:0; left:50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:-50rem;">
@@ -147,7 +149,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Spring Data</p>
+        <p>Historic Aquifer Outflow</p>
       </div>
     </div>
   </div>
@@ -156,7 +158,8 @@
   <div id="section06">
     <div skrollr class="div-fixed z-400" data-16999="top:8rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">Native and endangered species also benefit from the artesian springs whose discharge sustains downstream users and freshwater inflows entering the bays and estuaries of the Texas Gulf Coast.</p>
+        <!-- <p alt="">Native and endangered species also benefit from the artesian springs whose discharge sustains downstream users and freshwater inflows entering the bays and estuaries of the Texas Gulf Coast.</p> -->
+        <p alt="">Scientists study the Texas Blind Salamander and Fountain Darter, along with other endangered species, to help determine the best way of protecting them for future generations to enjoy.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-300" data-16999="top:19rem;" data-17000="opacity:0; left:60rem;" data-18000="opacity:1; left:55rem;" data-19000="opacity:1; left:55rem;" data-20000="opacity:0; left:60rem;">
@@ -173,7 +176,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-16999="left:18rem;" data-17000="opacity:0; top:58rem;" data-18000="opacity:1; top:52rem;" data-19000="opacity:1; top:52rem;" data-20000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Artesian Springs</p>
+        <p>Species Protection</p>
       </div>
     </div>
   </div>
