--- a/app/styles/skrollr.css
+++ b/app/styles/skrollr.css
@@ -54,9 +54,25 @@
   /* requires position */
   z-index: 500;
 }
+.z-600 {
+  /* requires position */
+  z-index: 600;
+}
+.z-700 {
+  /* requires position */
+  z-index: 700;
+}
 .z-800 {
   /* requires position */
   z-index: 800;
+}
+.z-900 {
+  /* requires position */
+  z-index: 900;
+}
+.z-1000 {
+  /* requires position */
+  z-index: 1000;
 }
 
 .progress-hor { 
@@ -210,6 +226,14 @@
   height: 4.8rem;
   background-size: cover;
   background-position: center center;
+  border: 0.15rem solid #444; /*#8E8C7A;*/ /*rgba(255,255,255,0.7);*/
+}
+.image-district {
+  width: 30rem;
+  height: 19rem;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 1rem;
   border: 0.15rem solid #444; /*#8E8C7A;*/ /*rgba(255,255,255,0.7);*/
 }
 .video-frame {
@@ -465,6 +489,9 @@
 #cons-image-20 { background-image: url(../images/conservation/Melani-Howard20120502_hd.jpg); }
 #cons-image-21 { background-image: url(../images/conservation/GBRA_20121017_800x.jpg); }
 #cons-image-22 { background-image: url(../images/conservation/EAAOsaws20120720_800x.jpg); }
+
+#cons-image-23 { background-image: url(../images/conservation/district_eaa.jpg); }
+#cons-image-24 { background-image: url(../images/conservation/EAA-map-revamp-V1.png); }
 
 /* Springs */
 #springs-image-00 { background-image: url(../images/springs/com-springs2-800x.jpg); }
