Debugged a few more if the dev build output issues. Added a few more basic tweaks. STarted work on interactives.

--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -143,6 +143,9 @@ a:hover {
 .info-contact {
   padding-left: 1rem;
 }
+.glyph-spacing-right {
+  margin-right: 0.5rem;
+}
 .info-footer {
   bottom: 1rem;
   /*font-style: italic;*/
