--- a/app/views/geography.html
+++ b/app/views/geography.html
@@ -15,7 +15,7 @@
       <div id="data-slides-container">
 
         <div id="recharge-backdrop" class="div-absolute offstage transition">
-          <div class="slide-label">Recharge Data</div>
+          <!-- <div class="slide-label">Recharge Data</div> -->
           <div id="recharge-slide" class="div-relative data-slide">
             <div id="interactive" class="interactive interactive-frame">
               <eaa-gauge-data-interactive-recharge></eaa-gauge-data-interactive-recharge>
