--- a/app/views/geology.html
+++ b/app/views/geology.html
@@ -164,7 +164,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Recharge Data</p>
+        <p>Historical Recharge Data</p>
       </div>
     </div>
   </div>
